COMP: Support customization of RigidAlignmentModule title and category

--- a/Modules/Scripted/RigidAlignmentModule/CMakeLists.txt
+++ b/Modules/Scripted/RigidAlignmentModule/CMakeLists.txt
@@ -2,6 +2,28 @@
 set(MODULE_NAME RigidAlignmentModule)
 
 #-----------------------------------------------------------------------------
+set(${MODULE_NAME}_TITLE "Rigid Alignment Module" CACHE STRING "Module title")
+set(${MODULE_NAME}_CATEGORY "Groups" CACHE STRING "Module category")
+
+set(MODULE_METADATA_SCRIPT
+  ${CMAKE_CURRENT_BINARY_DIR}/../${MODULE_NAME}Metadata/__init__.py
+  )
+
+set(TITLE_CONFIG ${${MODULE_NAME}_TITLE})
+set(CATEGORY_CONFIG ${${MODULE_NAME}_CATEGORY})
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/../${MODULE_NAME}Metadata/__init__.py.in
+  ${MODULE_METADATA_SCRIPT}
+  @ONLY
+  )
+
+slicerMacroBuildScriptedModule(
+  NAME ${MODULE_NAME}Metadata
+  SCRIPTS ${MODULE_METADATA_SCRIPT}
+  WITH_SUBDIR
+  )
+
+#-----------------------------------------------------------------------------
 set(MODULE_PYTHON_SCRIPTS
   ${MODULE_NAME}.py
   )
